Fixes double width flair and team soraka flair (whoops) Fixes dark mode comment input being black (closes #1)

--- a/darkmode.less
+++ b/darkmode.less
@@ -81,6 +81,8 @@
 		textarea {
 			background-color: @color-black;
 			border-color: @color-dark-gray;
+			
+			color: @dark-comment-input-color;
 		}
 	}
 	
