--- a/sidebar.less
+++ b/sidebar.less
@@ -514,11 +514,11 @@
 		}
 		
 		.moderator & {
-			top: -(@promo-offset-base + 207px);
+			top: -(@promo-offset-base + 176px);
 		}
 		
 		.moderator.res & {
-			top: -(@promo-offset-base + 227px);
+			top: -(@promo-offset-base + 193px);
 		}
 		
 		// Dammit, Chrome. Why is your text rendering so bad?
