--- a/style-darkmode.less
+++ b/style-darkmode.less
@@ -14,6 +14,7 @@
 @dark-link-color: lighten(@color-gray, 10%);
 @dark-sticky-color: @color-white;
 
+@dark-comment-input-color: @color-white;
 @dark-comment-lvl1-bg: @dark-content-text-bg;
 @dark-comment-lvl2-bg: @color-black;
 @dark-comment-border: @dark-content-text-border;
